2012-05-01  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_get_palette): new function

	* rgb2c, avatar.c: avt_colors uses one color number

2012-04-30  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_colorname): new function

        * akfavatar.h (avt_rgb, avt_red, avt_green, avt_blue):
	new macros

	* akfavatar.h, avatar.c
	(avt_set_background_colornr, avt_get_background_colornr)
        (avt_set_text_colornr, avt_set_text_background_colornr):
	new functions, many other functions deprecated

2012-04-29  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_set_balloon_mode): new function
	(avt_draw_avatar, avt_draw_balloon, avt_draw_balloon2)
	(avt_move_in, avt_move_out, avt_start): adapted
	(lua/lua-avt.c): adapted

	* pascal/akfavatar.pas (SetBalloonMode): new procedure

	* bdf2c: fix for -v

2012-04-25  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_avatar_window): new function

	* avatar.c (avt_show_image): inner window becomes image

	* avatar.c (avt_resize, avt_toggle_fullscreen, avt_switch_mode):
	fullscreen mode respects size of inner window

	* avatar.c (avt_analyze_event):
	make mousehandler work (differently), when there is no textfield

2012-04-23  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c: add code for resizing again

2012-04-14  Andreas K. Foerster  <info@akfoerster.de>

	* bdf2c: make function name configurable

	* akfavatar.h (avt_get_font_char): replaces get_font_char
	avatar.c, lua/akfavatar-graphic.c: adapted

2012-04-13  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_analyze_event): code cleanup

	* avatar.c (avt_key): parameter may be NULL

2012-04-12  Andreas K. Foerster  <info@akfoerster.de>

	* example.c: include XPM file

2012-04-11  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar-prg.c (help, check_options, initialize):
	support options for fullscreen mode (-f, -F)
