@@ -9,16 +9,16 @@
 # without any warranty.
 
 BEGIN	{ if (name == "") name = "palette"
+	  if (default == "") default = "0x000000" # must be a string
 
-          print "/* automatically generated by rgb2c */"
+	  print "/* automatically generated by rgb2c */"
 	  print ""
 	  print "#ifndef _RGB2C"
 	  print "#define _RGB2C"
 	  print ""
 	  print "static const struct { int number; const char *name; }"
 	  print name "[] = {"
-	  print "  /* default background color for AKFAvatar */"
-	  printf "  {0xE0D5C5, \"default\"}"
+	  printf "  {%s, \"default\"}", default
 	}
 
 /^!/	{ next }
