@@ -4,6 +4,8 @@
 
 	* rgb2c, avatar.c: avt_colors uses one color number
 
+	* avatar.c: new macro DEFAUL_COLOR
+
 2012-04-30  Andreas K. Foerster  <info@akfoerster.de>
 
 	* akfavatar.h, avatar.c (avt_colorname): new function
